--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TradeV8 | Personal Trader Portfolio</title>
     <style>
-        body {
+        <body style="
+  background: url('https://i.ibb.co/HTy8XNh/trading-bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+"> {
             margin: 0;
             font-family: 'Poppins', sans-serif;
             background-color: #0b0b0c;
